# Autonomous-Drone

./: .gitignore  CMakeLists.txt  Detector.cpp  Detector.h  Dispoint.cpp  Dispoint.h  FindExit.cpp  FindExit.h  FindPath.cpp  FindPath.h  Point.h  README.md  TUM.yaml  VID5.xml  camera_calibration.cpp  camera_calibration.hpp  detect_exit.hpp  dist_point.cpp  dist_point.hpp  findExit.cpp  find_path.cpp  find_path.hpp  in_VID5.xml  main.cpp  mono_tum (1).cc  move_drone.cc  navigation.cpp  out.csv  out_camera_data.yaml  point.cpp  point.hpp  pointData.csv  pointData2.csv  pointData3.csv  pointData4.csv  pointData5.csv  setup.sh  video_stream.cpp
CameraCalibration/: VID5.xml  in_VID5.xml  out_camera_data.yaml  out_camera_data.yaml.yaml
Data Examples/: pointData.csv  pointData1.csv  pointData2.csv  pointData4.csv  pointData_drone.csv
ORB_SLAM2/: CMakeLists.txt  LICENSE.txt  tello.yaml
ORB_SLAM2/Examples/Monocular/: detect_exit.cpp  detect_exit.hpp  dist_point.cpp  dist_point.hpp  find_path.cpp  find_path.hpp  main.cpp  navigation.cpp  navigation.hpp  point.cpp  point.hpp  test_navigation.cpp  video.cpp
ORB_SLAM2/rgbd_dataset_freiburg1_xyz/: accelerometer.txt  depth.txt  groundtruth.txt  rgb.txt
ORB_SLAM2/src/: Initializer.cc  LoopClosing.cc  ORBmatcher.cc  Optimizer.cc  System.cc  Tracking.cc
detect exit/: CMakeLists.txt  Dispoint.h  FindExit.h  FindPath.cpp  Point.h  pointData8.csv  pointDataVered.csv
detect exit/data/: pointData0.csv  pointData2.csv  pointDataDekel.csv
eigen/: CMakeLists.txt
eigen/bench/btl/: CMakeLists.txt
eigen/bench/spbench/: CMakeLists.txt
eigen/blas/: CMakeLists.txt
eigen/build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  buildtests.sh  cdashtesting.cmake  cmake_install.cmake  install_manifest.txt
eigen/build_dir/Eigen/: Makefile  cmake_install.cmake
eigen/build_dir/blas/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen/build_dir/demos/: Makefile  (+2 more)
eigen/doc/: AsciiQuickReference.txt  CMakeLists.txt
eigen/failtest/: CMakeLists.txt
eigen/test/: CMakeLists.txt
src/: Dispoint.cpp  DistPoint.cpp  DistPoint.h  FindExit.cpp  FindPath.h  Point.cpp  Point.h  findExit.cpp  findExit.h  main.cpp  video_stream.cpp
untitled2/: CMakeLists.txt  FindExit.h  Point.cpp  main.cpp  pointData1.csv
(+217 files in other folders)
